# NetGuard-Firewall-Intrusion-Detection-System-

./: .NetGuard  .replit  NetGuard.md  README.md  alert_manager.py  app.py  firewall_rules.py  network_simulator.py  pyproject.toml  replit.md  requirements.txt  threat_detector.py
static/css/: custom.css
static/js/: dashboard.js
templates/: base.html  index.html
